--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,8 @@ jobs:
           node-version: '16'
       - run: npm install
       - run: npm run build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./pages/.vitepress/dist
